# intrusion_detection

./: .gitignore  404.html  README.md  index.html  index.md  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
data/: data.md  index.html
doc/: data.md
docs/: index.md
docs/notebooks/exploration/: exploratory_data_analysis.ipynb  feature_engineering.ipynb  target_definition.ipynb
docs/notebooks/modelling/: modelling_anomalies+ddos.ipynb  modelling_anomalies.ipynb  modelling_ddos.ipynb
intrusion_detection/: load_input_data.py  predict.py  preprocessing.py  target_definition.py  train.py
intrusion_detection/feature_selection/: pipeline.py
intrusion_detection/modelling/: blender.py  cyber_attack_detector.py  ddos_detector.py  final_model_pipeline.py
intrusion_detection/preprocessing/: categorical_features.py  keep_input_features_wrapper.py  pipeline.py  preprocessing.py
notebooks/exploration/: exploratory_data_analysis.ipynb  target_definition.ipynb
notebooks/exploration/exploratory_data_analysis/: index.html
notebooks/exploration/feature_engineering/: feature_engineering.ipynb  index.html
notebooks/exploration/target_definition/: index.html  target_definition.ipynb
notebooks/modelling/modelling_anomalies/: index.html  modelling_anomalies.ipynb
notebooks/modelling/modelling_anomalies+ddos/: index.html  modelling_anomalies+ddos.ipynb
notebooks/modelling/modelling_ddos/: index.html
notebooks/play_with_pyod/: index.html  play_with_pyod.ipynb
search/: search_index.json
tests/unit/: test_rare_category_replacer.py
