[project]
name = "intrusion_detection"
description = "Model and API server for detecting network intrusions in military networks."
version = "0.1.0"
authors = [
    { name = "Claudio Salvatore Arcidiacono", email = "claudioarcidiacono94@gmail.com" }
]
dependencies = [
    "setuptools",
    "jupyter >=1,<2",
    "scikit-learn >=1.1.2,<2",
    "pyod",
    "pandas >=1.5.0,<2",
    "seaborn >=0.12.0,<1",
]

[project.optional-dependencies]
dev = ["pytest", "flake8", "black", "isort"]
doc = ["mkdocs", "mkdocs-jupyter", "mkdocs-material"]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
